AutoPilot Release Notes

Previously unpublished release...

 - Deutsch
    - Die Anzeige des freigegebenen Ordnernamens (usbshare1, usbshare2 etc.) eines externen Datenträgeres wurde angepasst.

 - English
    - The display of the shared folder name (usbshare1, usbshare2 etc.) of an external data carrier has been adjusted.


Version 1.1-700 vom 05.04.2024

 - Deutsch
    - Es wurde ein neues Menü für -benutzerdefinierte Script Templates-, sowie ein erstes, einfaches Script-Template hinzugefügt.
    - Der Begriff -DiskStation- wurde in allen Texten durch den Begriff -Synology NAS- ausgetauscht. 

 - English
    - A new menu for -user-defined script templates- and a first, simple script template have been added.
    - The term -DiskStation- has been replaced by the term -Synology NAS- in all texts.


Version 1.1-600 vom 17.03.2024

 - Deutsch
    - Update Bootstrap Framework auf 5.3.3 
    - Hyper Backup 4 sowie DSM 7.2 wurde als Mindestanforderungen für die Anzeige und Weiterverarbeitung von Hyper Backup Aufgaben festgelegt.
    - Es wird geprüft, ob der korrekte Konfigurationspfad zum auslesen der Hyper Backup Aufgaben existiert.   
    - Es wird vermieden, dass die Hyper Backup Aufgabe hängen bleibt nachdem der Bereinigungsprozess gestartet hat.
    - Die Hyper Backup sowie Basic Backup Skriptdatei verwendet jetzt die AutoPilot-Protokolldatei für zusätzliche Informationen.
    - Die Hyper Backup sowie Basic Backup Scriptdatei wird jetzt aus einer Templatedatei erstellt.
    - Es werden weitere, zusätzliche Informationen in dem AutoPilot Log während der Abarbeitung zur Verfügung gestellt.
    - Es werden in der GUI an den betreffenden Stellen temporäre Updateinformationen angezeigt, die nach einer Lesebestätigung ausgeblendet werden.
    - Es wurde (mal wieder) ein Leerzeichen Problem behoben, welches in Zusammenhang mit der Pfadangabe und der Shellscript Ausführung bestand.